Fix dark mode script

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,14 @@
 
 @layer base {
   body {
-    @apply bg-bluish-gray dark:bg-rua-gray-900 dark:text-gray-200 transition-colors;
-    font-family: "-apple-system,BlinkMacSystemFont,'Helvetica Neue',Helvetica,Segoe UI,Arial,Roboto,'PingFang SC',miui,'Hiragino Sans GB','Microsoft Yahei',sans-serif", sans-serif;
+    @apply bg-bluish-gray dark:bg-rua-gray-900 dark:text-gray-200;
+    font-family: "-apple-system,BlinkMacSystemFont,'Helvetica Neue',Helvetica,Segoe UI,Arial,Roboto,'PingFang SC',miui,'Hiragino Sans GB','Microsoft Yahei',sans-serif",
+      sans-serif;
   }
 
-  img, iframe {
-    @apply dark:brightness-75
+  img,
+  iframe {
+    @apply dark:brightness-75;
   }
 
   /* 滚动槽 */
